tests/src/frontend/typechecking/exhaustiveness/invalid/tuple_nested_boolean2.sk
fun test(): String {
  (true, true) match {
  | (true, true)
  | (true, true)
  | (false, true)
  | (false, false) ->
    "Fail\n"
  }
}
